--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ output.png
 output_pairplot.png
 descarte
 sprint_12_project_v2.ipynb
+Arquivo/sprint_12_project - english.ipynb
+Arquivo/sprint_12_project.ipynb
